# Baize_H1mini

./: Baize_H1mini制作教程.docx  README.md
1.3D model/: Battery_box.SLDPRT  Battery_box_cover.SLDPRT  Circuit_board.SLDPRT  Drive_plate.SLDPRT  GB823-88十字槽小盘头螺钉M2×4.SLDPRT  GB／T70．1-2000内六角圆柱头螺钉M2×4.SLDPRT  JIAN.SLDASM  JIJIA.SLDASM  MG90servo-gear.SLDPRT  MG90servo_body.sldprt  MG90servo_gear.sldprt  PTZbase.STL  PTZhead.STL  PTZleft.STL  body-back_wall.SLDPRT  body-bottom.SLDPRT  body-top.SLDPRT  body_bottom1.STL  body_mid1.STL  body_side_wall2.STL  body_top1.STL  foot-ground.SLDPRT  foot-top.SLDPRT  foot_bottom_6.STL  foot_ground_6.STL  foot_top_6.STL  head.STL  joint-bottom.SLDPRT  joint-top.SLDPRT  leg-bottom.SLDPRT  leg-peac.SLDPRT  leg-pice.SLDPRT  leg-stop.SLDPRT  leg_botom.SLDASM  leg_bottom6.STL  leg_top.SLDASM  leg_top_6.STL  right.STL  robot_leg.sldasm  robot_sixfoot.SLDASM  (+5 more)
1.3D model/Baize_HexapodRobot_Arduino_3DPrinter/: BATTERY HOLDER x2 18650.SLDASM  BOM.xlsx  Baize_HexapodRobot_Arduino_3DPrinter.STEP  MG90S.SLDPRT  body.SLDASM  body_back_wall.SLDPRT  body_bottom.SLDPRT  body_bottom1.SLDPRT  body_mid.SLDPRT  body_side_wall.SLDPRT  body_side_wall1.SLDPRT  body_top.SLDPRT  body_top1.SLDPRT  dianpian.SLDPRT  ding.SLDPRT  foot.SLDPRT  foot_bottom.SLDPRT  foot_ground.SLDPRT  foot_qiu.SLDPRT  foot_top.SLDPRT  foot（脚）.SLDASM  joint.SLDASM  joint_bottom.SLDPRT  joint_cross.SLDPRT  joint_top.SLDPRT  leg_bottom.SLDPRT  leg_top.SLDPRT  leg（腿）.SLDASM  mould_m.SLDPRT  mould_p.SLDPRT  thigh_bottom.SLDPRT  thigh_top.SLDPRT  thigh（大腿）.SLDASM  ~$MG90S.SLDPRT  变压.SLDPRT  总装.SLDASM  电池.SLDPRT  腿部总装.SLDASM  腿部总装1.SLDASM  销轴4x10.SLDPRT  (+1 more)
1.3D model/Baize_HexapodRobot_Arduino_3DPrinter_Origin/: MG90S.SLDPRT  body.SLDASM  body_back_wall.SLDPRT  body_bottom.SLDPRT  body_side_wall.SLDPRT  body_top.SLDPRT  foot_bottom.SLDPRT  foot（脚）.SLDASM  joint.SLDASM  joint_cross.SLDPRT  joint_top.SLDPRT  leg_bottom.SLDPRT  leg_top.SLDPRT  leg（腿）.SLDASM  thigh_top.SLDPRT  thigh（大腿）.SLDASM  变压.SLDPRT  总装.SLDASM  电池.SLDPRT  腿部总装.SLDASM  销轴4x10.SLDPRT  驱动板.SLDPRT
1.3D model/Baize_HexapodRobot_Arduino_CarbonBoardVersion/: Battery.SLDPRT  Body_link.SLDASM  Connecting_piece.SLDPRT  GB／T95-2002平垫圈C级2×0．3.SLDPRT  MG90servo-gear_1.SLDPRT  MG90servo_shaft.sldprt  RM_JIAN_LINK.SLDASM  SCHB_2 六角螺柱.SLDPRT  Toe.SLDPRT  body-side_wall.SLDPRT  foot-bottom.SLDPRT  jijia_kagu.SLDPRT  joint-cross.SLDPRT  leg-top.SLDPRT  leg_peac.SLDPRT  pin_shaft.SLDPRT  steering_engine.SLDASM  steering_engine_1.SLDASM
1.3D model/cad/: Connecting_piece_12.DWG  body-bottom_1.DWG  body-top_1.DWG  foot-bottom_6.DWG  zongtu.DWG  (+11 more)
2.Hardware files(EasyEDA)/: Baize_ServoDriver_esp8266_V1.1.rar
3.Software/ROS_package/Urdf_ConfigFiles/: CMakeLists.txt  package.xml
3.Software/ROS_package/Urdf_ConfigFiles/launch/: display.launch  gazebo.launch  hello.txt
3.Software/ROS_package/Urdf_ConfigFiles/meshes/: LB_XI_LINK.STL  LF_JIAN_LINK.STL  LF_P_LINK.STL  LF_R_LINK.STL  LF_ZHOU_LINK.STL  LM_P_LINK.STL  LM_R_LINK.STL  RB_XI_LINK.STL  RB_ZHOU_LINK.STL  RF_P_LINK.STL  RF_ZHOU_LINK.STL  RM_Y_LINK.STL  RM_ZHOU_LINK.STL
3.Software/ROS_package/Urdf_ConfigFiles/src/: BaizeHexapodRobot_Arduino_FluctuateStep.cpp
3.Software/ROS_package/Urdf_ConfigFiles/urdf/: Urdf_ConfigFiles.gv  Urdf_ConfigFiles.urdf
(+177 files in other folders)
